[tool.poetry]
name = "projecteweb"
version = "0.1.0"
description = ""
authors = ["Sergi Fernandez <s.nandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^1.26.14"
bs4 = "^0.0.1"
xmltodict = "^0.13.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
